<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:orientation="vertical"
    tools:context=".AllOptionsFragment">


    <EditText
        android:id="@+id/editOpcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/opcion"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:text="@string/cambiar" />

    <Button
        android:id="@+id/btn_c_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cambiar_email" />

    <Button
        android:id="@+id/btn_c_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cambiar_password" />

    <Button
        android:id="@+id/btn_reset_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_email" />

    <Button
        android:id="@+id/btn_eliminar_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eliminar_usuario" />

    <Button
        android:id="@+id/btn_sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/cerrar_sesion"
        android:textColor="@color/blanco" />

</LinearLayout>