<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".PasswordFragment">


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:contentDescription="@string/icono"
            app:srcCompat="@drawable/icono_firebase"
            tools:ignore="MissingConstraints" />

    </FrameLayout>

    <TextView
        android:id="@+id/editTextF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/olvidaste_tu_psw"
        android:textAllCaps="false"
        android:textColor="@color/blanco"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />


    <TextView
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/reestablecer_contraseña"
        android:textColor="@color/blanco"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/editTextF" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/background_light"
        android:textColorHint="@color/letras"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        tools:targetApi="o" />


    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:foregroundGravity="center"
        app:layout_constraintTop_toBottomOf="@+id/et_email">

        <Button
            android:id="@+id/btn_restablecer_psw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/holo_orange_light"
            android:foregroundGravity="center"
            android:text="@string/restablecer_contrase_a"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </FrameLayout>


    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:foregroundGravity="center"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

        <Button
            android:id="@+id/btn_fpsw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/transparent"
            android:foregroundGravity="center"
            android:text="@string/back"
            android:textColor="@android:color/holo_orange_light"
            android:textColorHint="@android:color/transparent"
            android:textSize="18sp" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>